# decutils

./: .gitignore  README.md  pyproject.toml  setup.py
decutils/: __init__.py  convert.py  fixed.py
