[tool.poetry]
name = "decutils"
version = "0.1.0"
description = ""
authors = ["motty.mio2 <motty.mio2@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
