[tool.poetry]
name = "decutils"
version = "1.0.1"
description = ""
authors = ["motty.mio2 <motty.mio2@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.6"
numpy = "1.19.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | venv
)
'''